fix: scroll behavior if coupon desc too long

--- a/public/scss/components/OrderSummaryBox.module.scss
+++ b/public/scss/components/OrderSummaryBox.module.scss
@@ -753,17 +753,18 @@
 
   &_voucherDetailPopUpHeaderTitle
   {
-    @include typographyBuilder(600, 16, 24);
+    @include typographyBuilder(400, 16, 24);
     word-break: break-all;
     margin: 0;
   }
 
   &_voucherDetailPopUpBody
   {
+    @include flex(column, stretch, stretch);
     background-color: $color_white;
     max-width: 375px;
     width: 100%;
-    max-height: 100vh;
+    max-height: 80vh;
     border-radius: 3px;
     
     @media screen and (max-width: $breakpoint_max_sm) {
@@ -782,7 +783,11 @@
 
   &_voucherDetailPopUpDescContainer
   {
+    @include flex(column, flex-start, flex-start);
+    max-height: 100%;
+    height: 100%;
     padding: 16px;
+    overflow: auto;
     border-top: 1px solid $color_light;
     border-bottom: 1px dashed $color_grey;
   }
@@ -802,6 +807,8 @@
 
   &_voucherDetailPopUpTermsContainer
   {
+    max-height: 100%;
+    overflow: auto;
     list-style-type: numeric;
     text-align : left; 
     padding-inline-start: 1em;
